# hut

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  packages.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: deploy-docs.yml
benchmarks/: bench-vs-make.sh  bench.sh
benchmarks/tmp_bench/fibproj_gcc/: fib  fib.c
benchmarks/tmp_bench/fibproj_hut/: hut.toml
benchmarks/tmp_bench/n10/: bench_gcc  hut.toml
benchmarks/tmp_bench/n10/src/: main.c  mod_6.c  mod_7.c  mod_8.c  mod_9.c
benchmarks/tmp_bench/n100/: bench_gcc  hut.toml
benchmarks/tmp_bench/n100/src/: main.c  mod_100.c  mod_11.c  mod_15.c  mod_18.c  mod_19.c  mod_20.c  mod_21.c  mod_22.c  mod_25.c  mod_28.c  mod_3.c  mod_30.c  mod_31.c  mod_33.c  mod_34.c  mod_37.c  mod_38.c  mod_40.c  mod_41.c  mod_43.c  mod_44.c  mod_45.c  mod_47.c  mod_51.c  mod_52.c  mod_53.c  mod_54.c  mod_55.c  mod_56.c  mod_57.c  mod_58.c  mod_59.c  mod_60.c  mod_61.c  mod_62.c  mod_63.c  mod_64.c  mod_65.c  mod_66.c  (+33 more)
benchmarks/tmp_bench/n50/: bench_gcc  hut.toml
benchmarks/tmp_bench/n50/src/: main.c  mod_1.c  mod_10.c  mod_12.c  (+21 more)
docs/: index.html
src/: builder.rs  cli.rs  config.rs  error.rs  fetcher.rs  flags.rs  http.rs  include.rs  index.rs  jit.rs  lib.rs  lockfile.rs  main.rs  package.rs  registry.rs  resolver.rs
src/commands/: add.rs  build.rs  completions.rs  create.rs  dev.rs  fmt_lint_clean.rs  helpers.rs  info.rs  init.rs  install.rs  link.rs  mod.rs  outdated.rs  patch.rs  pm.rs  remove.rs  run.rs  search.rs  test.rs  update.rs  upgrade.rs  workspace.rs  x.rs
tests/: integration.rs
