[package]
name = "hut"
version = "0.3.9"
edition = "2024"
description = "Fast build system and package manager for C/C++"
repository = "https://github.com/oliynykmax/hut"


[[bin]]
name = "hut"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
colored = "2"
indicatif = "0.17"
notify = { version = "7", features = ["macos_kqueue"] }
walkdir = "2"
tempfile = "3"
semver = "1"
dirs = "5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rayon = "1"
anyhow = "1"
thiserror = "2"
num_cpus = "1"
libloading = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
